--- a/index.html
+++ b/index.html
@@ -1421,6 +1421,8 @@
                 },
                 1000: {
                     items: 3
+                }, 1920: {
+                    items: 4
                 }
             }
         })
