--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
     <!-- google -->
     <div class="container-fluid googlebg">
         <div class="row m-0 m-0">
-            <div class="col-md-2">
+            <div class="col-md-2 secgoogdis" >
                 <div class="gooleimg">
                     <img class="img-fluid" src="images/google.png" alt="">
                 </div>
